# dockim

./: Cargo.toml  README.md  book-structure.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/test-compose/: compose.override.yml  compose.yml  devcontainer.json
.devcontainer/test-dockerfile/: Dockerfile  devcontainer.json
.github/workflows/: auto-doc-update.yml  deploy-docs.yml  deploy-pages.yml
docs/en/: book.toml
docs/en/src/: README.md  SUMMARY.md  advanced-usage.md  commands-reference.md  configuration.md  contributing.md  faq.md  getting-started.md  neovim-integration.md  port-management.md  troubleshooting.md
docs/en/src/user-guide/: README.md  container-management.md  development-workflow.md  project-initialization.md
docs/ja/: book.toml
docs/ja/src/: README.md  SUMMARY.md  advanced-usage.md  commands-reference.md  configuration.md  contributing.md  faq.md  getting-started.md  neovim-integration.md  port-management.md  troubleshooting.md
docs/ja/src/user-guide/: README.md  container-management.md  development-workflow.md  project-initialization.md
src/: auto_port_forward.rs  build.rs  cli.rs  clipboard.rs  config.rs  console.rs  devcontainer.rs  exec.rs  lib.rs  log.rs  main.rs  neovim.rs  port.rs  port_forwarder.rs  progress.rs  tail_display.rs
src/cli/: agent.rs  bash.rs  build.rs  clipboard.rs  clipboard_server.rs  down.rs  exec.rs  init.rs  init_config.rs  init_docker.rs  ls.rs  mod.rs  neovide.rs  neovim.rs  port.rs  ps.rs  shell.rs  stop.rs  up.rs
