[package]
name = "dockim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
itertools = "0.12.1"
maplit = "1.0.2"
miette = { version = "7.2.0", features = ["fancy"] }
scopeguard = "1.2.0"
serde = { version = "1.0.198", features = ["derive"] }
serde-hjson = "1.1.0"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tempfile = "3.17.1"
toml = "0.8.19"
